--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,12 @@
-{% include baseurl %}
-
 <meta charset="utf-8">
 
 {% include seo.html %}
 
-<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ baseurl }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+<link 
+  href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ site.baseurl }}/feed.xml{% endif %}" 
+  type="application/atom+xml" 
+  rel="alternate" 
+  title="{{ site.title }} Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -16,6 +18,6 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ baseurl }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
